# rust-api-warp-and-diesel

./: Cargo.toml  README.md
migrations/2022-01-04-011147_book_catalog_initial_schema/: up.sql
src/: main.rs
src/database/: connection_pool.rs  data_access.rs  mod.rs
src/error/: mod.rs
src/error/error_variants/: app_error.rs
src/server/: api.rs  handler.rs  mod.rs  model.rs  routes.rs
