[package]
name = "rust-api-warp-and-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# async 
tokio = { version = "1.15.0", features = ["macros"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

# web
warp = "0.3.2"

# database
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }

# env variables
itconfig = { version = "1.1.1", features = ["macro"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
version = "1"
